# hedit

./: .prettierignore  .prettierrc.js  .tool-versions  LICENSE  QWEN.md  README.md  biome.json  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml  sponsors.yml
scripts/: replace-version.js
src/: App.vue  main.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  hosts_parser.rs  lib.rs  license.rs  main.rs  menu.rs  remote_hosts.rs  settings_store.rs  sync_remote_hosts.rs  telemetry.rs  update_checker.rs
src/components/: AppWindow.vue  CodeEditor.vue  ConfirmModal.vue  ContextMenu.vue  CreateFileModal.vue  EditFileModal.vue  FileContextMenu.vue  LicenseModal.vue  LoadingSpinner.vue  MacOSWindow.vue  MonacoEditor.vue  RemoteFileModal.vue  SettingsModal.vue  Sidebar.vue  SidebarContextMenu.vue  Switch.vue  Toolbar.vue  Tooltip.vue  UpgradePromptModal.vue  WelcomeModal.vue
src/components/settings/: AboutSettingsTab.vue  AutoSyncSettingsTab.vue  GeneralSettingsTab.vue  LicenseSettingsTab.vue  RemoteSyncSettingsTab.vue
src/composables/: useFileOperations.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  usePlatform.ts  useTelemetry.ts  useTheme.ts  useZoom.ts
src/stores/: files.ts  settings.ts
src/utils/: zoomUtils.ts
