[package]
name = "hedit"
version = "0.1.0"
authors = ["Felipe Valtl de Mello"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hedit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
posthog-rs = "0.3.7"
tokio = { version = "1", features = ["full"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
