[package]
name = "hedit"
version = "0.0.0"
authors = ["Felipe Valtl de Mello"]
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hedit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-os = "2"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4"] }
once_cell = "1.21.3"
chrono = "0.4.42"
regex = "1.10"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
